<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_normal">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_normal"
        android:padding="@dimen/space_small"
        android:text="@string/app_name" />


    <EditText
        android:id="@+id/et_double_binding_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/double_binding_a"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_double_binding_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/double_binding_b"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_double_binding_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_normal"
        tools:text="@string/app_name" />

</LinearLayout>